--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,7 +39,8 @@ test:
   imports:
     - siphash24
   commands:
-    - "PYTHONHASHSEED=0 python check.py"
+    # https://github.com/dnicolodi/python-siphash24/issues/8:
+    - "PYTHONHASHSEED=0 python check.py"  # [not ((ppc64le or aarch64) and py<312)]
     - python test.py
   source_files:
     - test.py
