All conda-forge Python version use SipHash hashing functions
See https://github.com/conda-forge/python-feedstock/issues/718

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -39,8 +39,7 @@ test:
   imports:
     - siphash24
   commands:
-    # https://github.com/dnicolodi/python-siphash24/issues/8:
-    - "PYTHONHASHSEED=0 python check.py"  # [not ((ppc64le or aarch64) and py<312)]
+    - PYTHONHASHSEED=0 python check.py
     - python test.py
   source_files:
     - test.py
